# gpsfish

./: .gitignore  readme.md
gpsfish_dev/: AUTHORS.stockfish  CMakeLists.txt
gpsfish_dev/data/: Makefile
gpsfish_dev/jni/: Android.mk  Application.mk
gpsfish_dev/sample/binary-dist/gpsfish_setup/: README.ja.txt  README.mac.txt  README.txt
gpsfish_dev/src/: Makefile  benchmark.cpp  bitboard.h  bitcount.h  book.cpp  book.h  checkmate.h  evaluate.cpp  evaluate.h  history.h  lock.h  main.cpp  mainone.cc  makefile.local  misc.cpp  move.cpp  move.h  movegen.cpp  movepick.cpp  movepick.h  position.cpp  position.h  position.tcc  search.cpp  search.h  tables.cc  thread.cpp  thread.h  timeman.cpp  tt.cpp  tt.h  types.h  uci.cpp  ucioption.cpp
osl/: .gitignore  AUTHORS  CMakeLists.txt  INSTALL.mingw  LICENSE  Makefile  Toolchain-i686-mingw32.cmake.sample  makefile.conf  makefile.local  makefile.local.sample
osl/core/osl/: Makefile  additionalEffect.cc  additionalEffect.h  basic_type.cc  basic_type.h  config.h  container.cc  container.h  csa.cc  csa.h  enterKing.cc  enterKing.h  hashKey.cc  hashKey.h  numEffectState.cc  numEffectState.h  numEffectState.tcc  oslConfig.cc  oslConfig.h  progress.cc  progress.h  random.cc  random.h  simpleState.cc  simpleState.h  simpleState.tcc  usi.cc  usi.h
osl/core/osl/bits/: additionalOrShadow.h  align16New.cc  align16New.h  binaryIO.cc  binaryIO.h  bitXmask.cc  bitXmask.h  boardMask.cc  boardMask.h  boardTable.cc  boardTable.h  centering5x3.cc  centering5x3.h  construct.h  directionTraits.h  effectContent.h  effectedNumTable.cc  effectedNumTable.h  king8Info.cc  king8Info.h  mask.cc  mask.h  numBitmapEffect.h  numSimpleEffect.cc  numSimpleEffect.h  numSimpleEffect.tcc  offset32.h  pieceMask.cc  pieceMask.h  pieceMask64.h  pieceStand.cc  pieceStand.h  pieceTable.cc  pieceTable.h  ptypeTable.cc  ptypeTable.h  ptypeTraits.h  quadInt.h  squareCompressor.cc  squareCompressor.h
osl/core/osl/book/: bookInMemory.cc  bookInMemory.h  compactBoard.cc  compactBoard.h  openingBook.cc  openingBook.h
osl/core/osl/checkmate/: fixedDepthSearcher.cc  fixedDepthSearcher.h  fixedDepthSearcher.tcc  immediateCheckmate.cc  immediateCheckmate.h  immediateCheckmate.tcc  immediateCheckmateTable.cc  immediateCheckmateTable.h  proofDisproof.cc  proofDisproof.h
osl/core/osl/eval/: evalStagePair.h  evalTraits.h  eval_pieceStand.cc  eval_pin.cc  eval_progress.cc  king8.cc  king8.h  kingTable.cc  kingTable.h  majorPiece.cc  majorPiece.h  midgame.h  minorPiece.cc  minorPiece.h  mobility.cc  mobility.h  openMidEndingEval.cc  openMidEndingEval.h  piecePair.cc  piecePair.h  piecePairKing.cc  piecePairKing.h  pieceStand.h  pin.h  progress.h  ptypeEval.cc  ptypeEval.h  ptypeEvalTraits.h  see.cc  see.h  weights.cc  weights.h
osl/core/osl/mobility/: bishopMobility.h  countMobility.h  kingMobility.h  lanceMobility.h  mobilityTable.cc  mobilityTable.h  rookMobility.h
osl/core/osl/move_classifier/: check_.h  classifierTraits.h  directCheck.h  kingOpenMove.cc  kingOpenMove.h  moveAdaptor.h  openCheck.h  pawnDropCheckmate.h  safeMove.h  shouldPromoteCut.h
osl/core/osl/move_generator/: addEffectWithEffect.cc  addEffectWithEffect.h  allMoves.cc  (+22 more)
osl/core/test/: Makefile  board.t.cc  carray.t.cc  csa.t.cc  direction.t.cc  enterKing.t.cc  fixedCapacityVector.t.cc  hashKey.t.cc  king8Info.t.cc  move.t.cc  numEffectState.t.cc  piece.t.cc  pieceMask.t.cc  pieceStand.t.cc  player.t.cc  progress.t.cc  psn.t.cc  ptype.t.cc  ptypeOSquareVector.t.cc  quadInt.t.cc  testAll.cc  testOne.cc  usi.t.cc
osl/doc/: .htaccess  Doxyfile  Makefile
osl/full/osl/: Makefile  move-phash.c  tripleInt.h
osl/full/test/: Makefile  repetitionCounter.t.cc
osl/sample/: Makefile  find-almost-entering.cc  find-losing-moves.cc  find-uplevel-king.cc  legal_moves.cc  pass.cc  random_play.cc  search1_play.cc  show-effect.cc  show_repetition.cc  sort.cc  timer.cc
osl/sample/annotate/: annotate.cc
osl/sample/checkmate/: dfpnstat.cc  fixed-checkmate.cc  fixed-checkmate2.cc  make-problems.cc
osl/sample/debug/: hash-dump.cc  printMove.cc  printPdp.cc  printPiece.cc  printPosition.cc  printPtypeO.cc
osl/sample/eval/: openmidending-stat.cc  show-eval.cc  show-progresseval.cc  show-state.cc
osl/sample/learn/: learn-piece.cc  show-sibling.cc
osl/sample/misc/: convert.cc  showCores.cc  showMemory.cc
osl/sample/opening/: compare-book.cc  convert.cc  opening-validator.cc  openingBookConverter.cc  openingBookConverter.h  openingStatistics.cc  show-moves.cc  showOpening.cc
osl/sample/osl4r/: README
osl/sample/performance/: checkMovePerf.cc  fixedDepthSearchPerf.cc  isCheckPerf.cc  pin_perf.cc  progress_perf.cc  rating-perf.cc  see-perf.cc  simpleMovePerf.cc
osl/sample/progress/: progress.cc  show-state.cc
osl/sample/quiescence/: quiescence2stat.cc  quiescencestat.cc  range-vs-nodes.cc
osl/sample/rating/: probability.cc  ratingstat.cc  topn.cc
osl/sample/record/: all-states.cc  all-states2.cc  bad-moves.cc  check-ki2.cc  check-kisen.cc  checkmate-kisen.cc  count-win-loss.cc  csa-to-kifu-header-sample.txt  csa-to-kifu.cc  csa-to-kisen.cc  csajapanize.cc  find-states.cc  first-search-eval.cc  kakinoki-to-csa.cc  kifu-to-myshogi.cc  kisen-to-csa.cc  last-position.cc  move_iregular_records.rb  show-ipx-result.cc  show-ipx.cc  show-ki2-all.sh  show-ki2.cc  showRecord.cc  unique-csa.cc  wdoor-to-kisen.sh  win-rate-openingbook-weight-level.cc
osl/std/osl/: Makefile  centering3x3.cc  centering3x3.h  moveLogProb.cc  moveLogProb.h  pathEncoding.cc  pathEncoding.h  repetitionCounter.cc  repetitionCounter.h  sennichite.cc  sennichite.h
osl/std/test/: Makefile  centering3x3.t.cc  centering5x3.t.cc  moveLogProbVector.t.cc  moveStack.t.cc  pathEncoding.t.cc  testAll.cc  testOne.cc
osl/tools/: bi.pl  checkstat-summary.pl  chi.pl  csa2myshogi.rb  false-brinkmate.pl  same-opening.pl
osl/tools/boardscan/: board.rb  csa.sh  detect.rb  extract.rb  pgm.rb  piece.sh  util.rb
osl/tools/kanji2csa/: 200501.html  kanji2csa.rb  sample.txt
osl/tools/multi-mtdfstat/: compare.rb  machine-conf.rb  run.rb  run.sh  stat.rb
(+3142 files in other folders)
